--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -36,7 +36,7 @@
     "description": "Cancel button"
   },
   "buttonok": {
-    "message": "OK!",
+    "message": "OK !",
     "description": "OK button"
   },
   "reportpubliclyavailable": {
@@ -126,7 +126,7 @@
     "description": "Warns the user that nothing will be blocked."
   },
   "blacklisterblocksalloftype": {
-    "message": "Attention : ce filter bloque tous les éléments type $elementtype$ sur la page !",
+    "message": "Attention : ce filtre bloque tous les éléments de type $elementtype$ sur la page !",
     "description": "Warns the user that all elements of type X will be blocked.",
     "placeholders": {
       "elementtype": {
@@ -168,7 +168,7 @@
     "description": "node name is called 'Type' (HTML tag)"
   },
   "buttonlooksgood": {
-    "message": "C'est bon",
+    "message": "C'est fait",
     "description": "Confirmation button after user chose what to block on the page"
   },
   "buttonback": {
@@ -376,11 +376,11 @@
     "description": "Label to remove a custom filter list"
   },
   "you_know_thats_a_bad_idea_right": {
-    "message": "Plus vous utilisez de listes de filtres, plus vous ralentissez AdBlock. En utilisant trop de listes, vous risquez même de faire planter votre navigateur sur certaines sites web. Appuyez sur OK pour confirmer votre abonnement à cette liste.",
+    "message": "Plus vous utilisez de listes de filtres, plus vous ralentissez AdBlock. En utilisant trop de listes, vous risquez même de faire planter votre navigateur sur certains sites web. Appuyez sur OK pour confirmer votre abonnement à cette liste.",
     "description": "Confirmation message shown to user if they try to subscribe to too many lists. The user will have two options: OK and Cancel."
   },
   "unsubscribe_from_all_confirmation": {
-    "message": "AdBlock ne bloquera aucune publicité si vous désactivez tous les listes de filtres. Nous vous recommandons plutôt de mettre en pause AdBlock. Confirmer malgré tout votre désabonnement à cette liste ?",
+    "message": "AdBlock ne bloquera aucune publicité si vous désactivez toutes les listes de filtres. Nous vous recommandons plutôt de mettre en pause AdBlock. Confirmer malgré tout votre désabonnement à cette liste ?",
     "description": "Confirmation message shown to user if they try to unsubscribe from all filter lists. The user will have two options: OK and Cancel."
   },
   "filterstabtitle": {
@@ -1196,7 +1196,7 @@
     "description": "Title of the final ad report question if the ad didn't appear in Firefox"
   },
   "cantblockflashwarning": {
-    "message": "La publicité s'affiche-t-elle avant ou pendant un film ou tout autre module type jeu Flash ?",
+    "message": "La publicité s'affiche-t-elle avant ou pendant un film ou tout autre module de type jeu Flash ?",
     "description": "Text of the final ad report question"
   },
   "cantblockflash": {
@@ -1288,7 +1288,7 @@
     "description": "Alert displayed after clicking 'Pause AdBlock' in the AdBlock menu while Safari Content blocking is enabled."
   },
   "safaricontentblockinglimitexceeded": {
-    "message": "Vos listes de filtres ont dépassé la limite de 50 000 règles, elles ont été réduites automatiquement. Veuillez vous désabonner de certaines listes de filtres ou désactiver le Bloqueur de contenu Safari !",
+    "message": "Vos listes de filtres ont dépassé la limite de 50 000 règles, elles ont donc été réduites automatiquement. Veuillez vous désabonner de certaines listes de filtres ou désactiver le Bloqueur de contenu Safari !",
     "description": "Displayed when the number of rules in the subscribed filter lists is larger than the number supported by Safari Content Blocking, if that option is enabled."
   },
   "browserestartrequired": {
@@ -1344,7 +1344,7 @@
     "description": "Link to AdBlock's privacy policy"
   },
   "translator_credit": {
-    "message": "Merci pour leur aide en traduction :",
+    "message": "Merci pour leur aide à la traduction :",
     "description": "This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
   },
   "tabsupport": {
@@ -1388,7 +1388,7 @@
     "description": "Caption for the whitelist wizard slider that modifies the path part of a URL"
   },
   "show_ads_except_for": {
-    "message": "Afficher les publicités partout à l’exception de ces domaines...",
+    "message": "Afficher les publicités partout, à l’exception de ces domaines...",
     "description": "Section title for the whitelisting section of Customize tab"
   },
   "only_block_ads_on_these_sites": {
@@ -1658,7 +1658,7 @@
     "description": "Resource list page: error message"
   },
   "resourcedomain": {
-    "message": "Charge sur la page du domaine :\n$domain$",
+    "message": "Chargé sur la page du domaine :\n$domain$",
     "description": "Resource list page: text shown when hovering over an item in the third-party column",
     "placeholders": {
       "domain": {
@@ -1758,7 +1758,7 @@
     "description": "Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
   },
   "acceptable_ads_content_blocking_disbled_message": {
-    "message": "Votre abonnement à Publicité Acceptable a été annulé car vous avez activé le Bloqueur de contenu Safari. Vous ne pouvez pas faire les deux en même temps. ([[Pourquoi ?]])",
+    "message": "Votre abonnement à Publicité Acceptable a été annulé car vous avez activé le Bloqueur de contenu Safari. Vous ne pouvez pas utiliser les deux en même temps. ([[Pourquoi ?]])",
     "description": "Warning shown when Safari Content Blocking is enabled while the Acceptable Ads filter list was already enabled."
   },
   "content_blocking_acceptable_ads_disbled_message": {
@@ -1798,7 +1798,7 @@
     "description": "Button to send a form."
   },
   "adreport_missing_info": {
-    "message": "Des informations requises sont manquantes ou non valides.  Veuillez répondre aux questions encadrées de rouge.",
+    "message": "Des informations requises sont manquantes ou non valides.  Veuillez répondre aux questions encadrées en rouge.",
     "description": "Error message shown when the user doesn't enter anything in some of the text fields."
   },
   "adreport_missing_screenshot": {
@@ -1806,7 +1806,7 @@
     "description": "Error message shown when the user doesn't attach a screenshot to an ad report."
   },
   "adreport_response_success": {
-    "message": "Tout est prêt ! Nous vous tiendrons au courant dès que possible. En attendant, vérifiez que vous avez reçu un courriel d'AdBlock. Vous y trouverez un lien vers votre ticket sur notre site web, et des suggestions d'aide si nous ne pouvons pas vous répondre immédiatement.",
+    "message": "Tout est prêt ! Nous vous tiendrons au courant dès que possible. En attendant, vérifiez que vous avez reçu un e-mail d'AdBlock. Vous y trouverez un lien vers votre ticket sur notre site web, et des suggestions d'aide si nous ne pouvons pas vous répondre immédiatement.",
     "description": "Shown when a ticket has been sumbitted to AdBlock's support site successfully."
   },
   "adreport_response_invalid_file": {
@@ -1858,7 +1858,7 @@
     "description": "Option to let the user choose AdBlock's display language."
   },
   "display_language_selector": {
-    "message": "Afficher AdBlock dans",
+    "message": "Afficher AdBlock en",
     "description": "Text shown before language selector drop-down."
   },
   "local_cdn_option": {
@@ -1942,7 +1942,7 @@
     "description": "The text telling MyAdBlock active users that there will be more photos for MyAdBlock."
   },
   "myadblock_pic_replacemenet_description": {
-    "message": "Remplacer des publicités par des images que vous aimez",
+    "message": "Remplacer les publicités par des images que vous aimez",
     "description": "The text briefly describing what the feature does in the MyAdBlock tab in the option page."
   },
   "myadblock_payment_not_available_title": {
@@ -2060,7 +2060,7 @@
     "description": "A filter list"
   },
   "filter_annoyances_explained": {
-    "message": "bloque les pop-ups à l'intérieur des pages, les widgets de réseaux sociaux et d'autres désagréments",
+    "message": "bloque les pop-ups à l'intérieur des pages, les widgets de réseaux sociaux et autres désagréments",
     "description": "A filter list explanation"
   },
   "filterwarning_removal2": {
@@ -2092,7 +2092,7 @@
     "description": "Subtitle on the 'Customize' tab"
   },
   "filtersavewarning_part1": {
-    "message": "Attention : en cas d'erreur, vous pouvez perturber le fonctionnement de beaucoup d'autres filtres, y compris les filtres officiels !",
+    "message": "Attention : en cas d'erreur, vous pouvez perturber le fonctionnement de nombreux autres filtres, y compris les filtres officiels !",
     "description": "Warning when manually editing filters -- first part not clickable."
   },
   "filtersavewarning_part2": {
@@ -2104,7 +2104,7 @@
     "description": "Text of a payment request link"
   },
   "translator_credit2": {
-    "message": "Merci pour leur aide en traduction...",
+    "message": "Merci pour leur aide à la traduction...",
     "description": "This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
   },
   "selectlanguage2": {
@@ -2144,7 +2144,7 @@
     "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
   },
   "myadblock_themes_description": {
-    "message": "Modifiez l'apparence d'AdBlock, y compris la taille de la police et le schéma de couleurs",
+    "message": "Modifiez l'apparence d'AdBlock, y compris la taille de la police et la palette de couleurs",
     "description": "Text briefly describing what themes do on the MyAdBlock tab of the Options page"
   },
   "stay_tuned": {
@@ -2187,6 +2187,10 @@
     "message": "Lumineux",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "rebecca_purple_theme": {
+    "message": "Violet Rebecca",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Appliquer le thème",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
@@ -2208,7 +2212,7 @@
     "description": "Description of option on General tab of the Options page to hide Twitch ads"
   },
   "callout_new_feature": {
-    "message": "NOUVEAU!",
+    "message": "NOUVEAU !",
     "description": "Text to callout a new feature"
   },
   "myadblock_short_description": {
@@ -2288,7 +2292,7 @@
     "description": "message to users on the option pages when syncing with the server server is complete"
   },
   "sync_extension_no_extension_msg": {
-    "message": "Aucune extension synchro.",
+    "message": "Aucune extension synchronisée.",
     "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
   },
   "sync_header_message_setup_fail_prefix": {
@@ -2300,7 +2304,7 @@
     "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_error_prefix": {
-    "message": "Cette extension n'était pas synchro.",
+    "message": "Cette extension n'était pas synchronisée.",
     "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
   },
   "sync_header_message_error_suffix": {
@@ -2368,7 +2372,7 @@
     "description": "message text in the on the sync page "
   },
   "sync_now_btn_text": {
-    "message": "Synchroniser",
+    "message": "Synchroniser maintenant",
     "description": "button text on the Sync sub-tab of the Options page"
   },
   "sync_message_old_version_part_1": {
