--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -36,7 +36,7 @@
     "description": "Cancel button"
   },
   "buttonok": {
-    "message": "OK!",
+    "message": "Oké!",
     "description": "OK button"
   },
   "reportpubliclyavailable": {
@@ -56,7 +56,7 @@
     "description": "Title for the Options page"
   },
   "optionstitle_yt": {
-    "message": "AdBlock-opties op YouTube™",
+    "message": "AdBlock op YouTube™--opties",
     "description": "Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2": {
@@ -376,7 +376,7 @@
     "description": "Label to remove a custom filter list"
   },
   "you_know_thats_a_bad_idea_right": {
-    "message": "Hoe meer filterlijsten je gebruikt, hoe langzamer AdBlock wordt. Als je teveel lijsten gebruikt, kan je browser zelfs vastlopen op bepaalde websites. Druk op OK om je toch te abonneren op deze lijst.",
+    "message": "Hoe meer filterlijsten je gebruikt, hoe langzamer AdBlock wordt. Als je te veel lijsten gebruikt, kan je browser zelfs vastlopen op bepaalde websites. Druk op Oké om je toch te abonneren op deze lijst.",
     "description": "Confirmation message shown to user if they try to subscribe to too many lists. The user will have two options: OK and Cancel."
   },
   "unsubscribe_from_all_confirmation": {
@@ -408,7 +408,7 @@
     "description": "Label to display filter list links"
   },
   "filterantisocial": {
-    "message": "Antisocial-filterlijst (verwijdert sociale-mediaknoppen)",
+    "message": "Antisociale filterlijst (verwijdert sociale-mediaknoppen)",
     "description": "A filter list"
   },
   "filterannoyances": {
@@ -720,7 +720,7 @@
     "description": "Tells the user to re-enable the extensions one by one"
   },
   "correctfilters": {
-    "message": "Controleer of je de juist taalfilter(s) gebruikt:",
+    "message": "Controleer of je de juiste taalfilter(s) gebruikt:",
     "description": "On the ad report page, label describing having the right filter lists enabled"
   },
   "pagelanguagecheck": {
@@ -1112,7 +1112,7 @@
     }
   },
   "fixityourself": {
-    "message": "OK, je kunt deze advertentie nog steeds blokkeren voor jezelf via de optiepagina. Bedankt!",
+    "message": "Oké, je kunt deze advertentie nog steeds blokkeren voor jezelf via de optiepagina. Bedankt!",
     "description": "Telling users who won't report an ad to us how to handle it for themselves"
   },
   "popup_menu_title": {
@@ -1746,7 +1746,7 @@
     "description": "Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
   },
   "easylist_disable_how_to_reenable": {
-    "message": "We raden je aan om dit ingeschakeld te houden. Als je je per ongeluk hebt afgemeld, selecteren je nu 'EasyList' om meer advertenties te blokkeren.",
+    "message": "We raden je aan om dit ingeschakeld te houden. Als je je per ongeluk hebt afgemeld, selecteer je nu 'EasyList' om meer advertenties te blokkeren.",
     "description": "Message shown to users after disabling EasyList via the Filter lists tab on the Options page."
   },
   "easylist_lite_disable_done": {
@@ -2084,11 +2084,11 @@
     "description": "Subtitle on the 'Customize' tab"
   },
   "manualfilteredit2": {
-    "message": "Bewerk je filters handmatig",
+    "message": "Je filters handmatig bewerken",
     "description": "Subtitle on the 'Customize' tab"
   },
   "manualexcludefilteredit2": {
-    "message": "Bewerk uitgeschakelde filters",
+    "message": "Uitgeschakelde filters bewerken",
     "description": "Subtitle on the 'Customize' tab"
   },
   "filtersavewarning_part1": {
@@ -2185,6 +2185,10 @@
   },
   "sunshine_theme": {
     "message": "Zonneschijn",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "rebecca_purple_theme": {
+    "message": "Rebecca Purple",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "apply_theme": {
