--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -1838,7 +1838,7 @@
     "description": "Error message shown when the server has an unrecoverable error during the submission of an ad or bug report."
   },
   "adreport_server_response_error__manual_msg_step2": {
-    "message": "Och skapa en felanmälan, och kpoiera och klistra in informationen nedan in i \"Fyll i eventuella detaljer som du tror kan hjälpa oss att förstå ditt problem\"-delen.",
+    "message": "Och skapa en felanmälan, och kopiera och klistra in informationen nedan in i \"Fyll i eventuella detaljer som du tror kan hjälpa oss att förstå ditt problem\"-delen.",
     "description": "Error message shown when the server has an unrecoverable error during the submission of an ad or bug report."
   },
   "custom_filters_migration_error_message_part1": {
@@ -2185,6 +2185,10 @@
   },
   "sunshine_theme": {
     "message": "Solsken",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "rebecca_purple_theme": {
+    "message": "Rebecca Purple",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "apply_theme": {
