--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -468,7 +468,7 @@
     "description": "A filter list"
   },
   "filterbitcoin_mining_protection": {
-    "message": "加密貨幣（比特幣）探勘保護清單",
+    "message": "加密貨幣（比特幣）挖礦保護清單",
     "description": "A filter list"
   },
   "filterlatvian": {
@@ -1276,7 +1276,7 @@
     "description": "Menu entry to pause AdBlock on this domain (stop blocking ads)"
   },
   "unpause_adblocking": {
-    "message": "取消暫停廣告攔截",
+    "message": "取消暫停廣告阻擋",
     "description": "Menu entry to unpause the extension (start blocking ads again)"
   },
   "pause_adblocking": {
@@ -1460,7 +1460,7 @@
     "description": "Checkbox letting user choose whether the toolbar button should show a badge with the number of ads blocked"
   },
   "show_on_menu": {
-    "message": "在功能表上顯示阻擋的廣告數量",
+    "message": "在選單上顯示阻擋的廣告數量",
     "description": "Checkbox letting user choose whether the AdBlock menu should show the number of ads blocked"
   },
   "block_ads_on_youtube": {
@@ -2176,7 +2176,7 @@
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "solarized_theme": {
-    "message": "Solarized",
+    "message": "曝光",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "ocean_theme": {
@@ -2185,6 +2185,10 @@
   },
   "sunshine_theme": {
     "message": "陽光",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "rebecca_purple_theme": {
+    "message": "雷貝嘉紫色",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "apply_theme": {
