--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -9,7 +9,7 @@
   },
   "name_devbuild": {
     "description": "Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
-    "message": "Versión de desarrollo de Adblock"
+    "message": "Versión de desarrollo de AdBlock"
   },
   "name_releasebuild": {
     "description": "Extension name to be shown for release \/ published builds.  Should not be translated",
@@ -28,7 +28,7 @@
     "description": "Name of version of the AdBlock extension that only blocks ads on YouTube. Other strings that refer to the 'AdBlock on YouTube' extension should use this name."
   },
   "adblock_click_for_details": {
-    "message": "AdBlock - haz clic para obtener más información",
+    "message": "AdBlock: haz clic para obtener más información",
     "description": "Tooltip on the AdBlock button, to help users understand that they can click the button to access more options."
   },
   "buttoncancel": {
@@ -36,11 +36,11 @@
     "description": "Cancel button"
   },
   "buttonok": {
-    "message": "¡OK!",
+    "message": "¡Vale!",
     "description": "OK button"
   },
   "reportpubliclyavailable": {
-    "message": "Nota: es posible que tu informe se haga público. Ten esto en cuenta antes de incluir información privada.",
+    "message": "Nota: Es posible que tu informe se haga público. Tenlo en cuenta antes de incluir información privada.",
     "description": "Ad report page string, when you're about to submit a report."
   },
   "buttonblockit": {
@@ -64,7 +64,7 @@
     "description": "Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Chrome displays when you right click a toolbar button."
   },
   "operabutton_how_to_hide2": {
-    "message": "Para ocultar el botón, ve a opera:\/\/extensions y haz marca la opción \"Ocultar de la barra de herramientas\". Puedes mostrarlo de nuevo desmarcando la opción.",
+    "message": "Para ocultar el botón, ve a opera:\/\/extensions y marca la opción \"Ocultar de la barra de herramientas\". Puedes mostrarlo de nuevo desmarcando la opción.",
     "description": "Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Opera displays on the Extensions page."
   },
   "safaributton_how_to_hide2": {
@@ -104,7 +104,7 @@
     "description": "Warning if the user hasn't specified a filter"
   },
   "blacklistereditfilter": {
-    "message": "Escribe el filtro correcto a continuación y haz clic en OK",
+    "message": "Escribe el filtro correcto a continuación y haz clic en Vale",
     "description": "Text if the user wants to manually edit a filter. 'OK' is the standard JavaScript popup button text."
   },
   "blacklistereditinvalid1": {
@@ -204,11 +204,11 @@
     "description": "Button for excluding a domain in the whitelist wizard"
   },
   "reloadpageafterwhitelist": {
-    "message": "Recargar la página.",
+    "message": "Recarga la página.",
     "description": "Checkbox in the whitelist wizard"
   },
   "wizardcantrunonframesets": {
-    "message": "Esta función de AdBlock no funciona en este sitio web puesto que usa una tecnología obsoleta. Puedes añadir recursos de manera manual a la lista negra y la lista blanca en la pestaña \"Personalizar\" en la página Opciones.",
+    "message": "Esta función de AdBlock no funciona en este sitio web puesto que usa una tecnología obsoleta. Puedes añadir recursos de manera manual a la lista negra y la lista blanca en la pestaña \"Personalizar\" de la página Opciones.",
     "description": "Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm": {
@@ -348,19 +348,19 @@
     "description": "Status label when selecting a new filter list"
   },
   "ab_filters_subscription_lastDownload_invalidURL": {
-    "message": "Error, dirección no válida",
+    "message": "Error: dirección no válida",
     "description": "Filter lists tab of the Options page: Message when you subscribe to a non-list URL."
   },
   "ab_filters_subscription_lastDownload_connectionError": {
-    "message": "Error, descarga fallida",
+    "message": "Error: descarga fallida",
     "description": "Filter lists tab of the Options page: Generic filter list download error message."
   },
   "ab_filters_subscription_lastDownload_invalidData": {
-    "message": "Error, lista de filtros no válida",
+    "message": "Error: lista de filtros no válida",
     "description": "Filter lists tab of the Options page: Invalid filter list file."
   },
   "ab_filters_subscription_lastDownload_checksumMismatch": {
-    "message": "Error, suma de comprobación incorrecta",
+    "message": "Error: suma de comprobación incorrecta",
     "description": "Filter lists tab of the Options page: Corrupted filter list file."
   },
   "invalidListUrl": {
@@ -376,7 +376,7 @@
     "description": "Label to remove a custom filter list"
   },
   "you_know_thats_a_bad_idea_right": {
-    "message": "Cuanto más listas de filtros uses, más lento funcionará AdBlock. Usar demasiadas listas puede incluso derivar en que tu navegador se bloquee en algunos sitios web. Haz clic en OK para suscribirte a esta lista de todas formas.",
+    "message": "Cuantas más listas de filtros uses, más lento funcionará AdBlock. Usar demasiadas listas incluso puede hacer que tu navegador se bloquee en algunos sitios web. Haz clic en Vale para suscribirte a esta lista de todas formas.",
     "description": "Confirmation message shown to user if they try to subscribe to too many lists. The user will have two options: OK and Cancel."
   },
   "unsubscribe_from_all_confirmation": {
@@ -420,7 +420,7 @@
     "description": "A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
   },
   "filteracceptable_ads": {
-    "message": "Anuncios Aceptables",
+    "message": "Anuncios aceptables",
     "description": "A filter list"
   },
   "filteradblock_custom": {
@@ -572,7 +572,7 @@
     "description": "Button to delete error messages when adding custom filters manually"
   },
   "contentblockingwarning": {
-    "message": "Nota: cuando los bloqueadores de contenido están activados, no podrás añadir una página o sitio web a la lista blanca (permitir que tenga anuncios).",
+    "message": "Nota: Cuando el bloqueador de contenido de Safari está activado, no podrás añadir una página o sitio web a la lista blanca (permitir que tenga anuncios).",
     "description": "Notice shown on the 'Customize' tab of the options page when Safari Content Blocking is enabled"
   },
   "savebutton": {
@@ -584,7 +584,7 @@
     "description": "Reminder to click 'Save'"
   },
   "adblockreportinganad": {
-    "message": "AdBlock - informar de un anuncio",
+    "message": "AdBlock: informar de un anuncio",
     "description": "Title of the ad report page"
   },
   "adreportintro": {
@@ -624,19 +624,19 @@
     "description": "On the ad report page, the ads the user is seeing are probably not caused by malware\/adware"
   },
   "disableaa": {
-    "message": "Comprobar filtros de Anuncios Aceptables:",
+    "message": "Comprobar filtros de Anuncios aceptables:",
     "description": "Section header on the ad report page"
   },
   "clickdisableaa": {
-    "message": "Haz clic aquí: [[Deshabilitar Anuncios Aceptables]]",
+    "message": "Haz clic aquí: [[Deshabilitar Anuncios aceptables]]",
     "description": "Instruction on ad report page"
   },
   "aamessageadreport": {
-    "message": "Si prefieres no ver anuncios como este, deberías inhabilitar la lista de filtros de Anuncios Aceptables.",
+    "message": "Si prefieres no ver anuncios como este, deberías inhabilitar la lista de filtros de Anuncios aceptables.",
     "description": "Acceptable Ads message on ad report page"
   },
   "aalinkadreport": {
-    "message": "Más información sobre el programa de Anuncios Aceptables.",
+    "message": "Más información sobre el programa de Anuncios aceptables.",
     "description": "Acceptable Ads link message on ad report page"
   },
   "adreportthanks": {
@@ -672,7 +672,7 @@
     "description": "On the ad report page, telling the user there is nothing to do as the ad they were seeing is now blocked."
   },
   "disableallextensions": {
-    "message": "Deshabilitar todas las extenciones excepto AdBlock:",
+    "message": "Deshabilitar todas las extensiones excepto AdBlock:",
     "description": "Instruction on ad report page"
   },
   "disableforchromestepone": {
@@ -1024,7 +1024,7 @@
     "description": "Multiple choice option"
   },
   "nodefaultfilter1": {
-    "message": "No tenemos ningún filtro por defecto para ese idioma.\n[[Intenta encontrar una lista apta que soporte este idioma]] o bloquea este anuncio por ti mismo a través del menú de AdBlock.",
+    "message": "No tenemos ningún filtro por defecto para ese idioma.\n[[Intenta encontrar una lista apta que admita este idioma]] o bloquea este anuncio por ti mismo a través del menú de AdBlock.",
     "description": "Instructions on ad report page pointing users to EasyList subscriptions list."
   },
   "retryaftersubscribe": {
@@ -1730,7 +1730,7 @@
     "description": "Resource list page: column title telling if the resource originates from a different domain"
   },
   "acceptableadsdisable_done": {
-    "message": "Ya no estás suscrito a la lista de filtros de Anuncios Aceptables.",
+    "message": "Ya no estás suscrito a la lista de filtros de Anuncios aceptables.",
     "description": "Message shown to users after disabling Acceptable Ads via the Options page."
   },
   "acceptableadsdisable_how_to_reenable": {
@@ -1758,7 +1758,7 @@
     "description": "Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
   },
   "acceptable_ads_content_blocking_disbled_message": {
-    "message": "Te hemos dado de baja de la lista de Anuncios Aceptables porque has activado los bloqueadores de contenido de Safari. Solo puedes seleccionar una opción a la vez. ([[¿Por qué?]])",
+    "message": "Te hemos dado de baja de la lista de Anuncios aceptables porque has activado los bloqueadores de contenido de Safari. Solo puedes seleccionar una opción a la vez. ([[¿Por qué?]])",
     "description": "Warning shown when Safari Content Blocking is enabled while the Acceptable Ads filter list was already enabled."
   },
   "content_blocking_acceptable_ads_disbled_message": {
@@ -2187,6 +2187,10 @@
     "message": "Amanecer",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "rebecca_purple_theme": {
+    "message": "Morado Rebecca",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Aplicar tema",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
@@ -2380,7 +2384,7 @@
     "description": "button text on the Sync sub-tab of the Options page"
   },
   "filteracceptable_ads_privacy": {
-    "message": "Privacidad de Anuncios Aceptables",
+    "message": "Privacidad de Anuncios aceptables",
     "description": "A filter list"
   },
   "acceptable_ads_privacy": {
