--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -2187,6 +2187,10 @@
     "message": "サンシャイン",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "rebecca_purple_theme": {
+    "message": "レベッカパープル",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "テーマを適用",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
