--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -2187,6 +2187,10 @@
     "message": "Brilho solar",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "rebecca_purple_theme": {
+    "message": "Roxo Rebecca",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Aplicar tema",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
