--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -2187,6 +2187,10 @@
     "message": "Свет",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "rebecca_purple_theme": {
+    "message": "Фиолетовый Ребекки",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Применить тему",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
