--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,16 @@
 
 UNRELEASED:
 
+Version: 3.53.0, Date: 2019-08-23
+- Updated to ABP Core 3.6.3
+
+Version: 3.52.1, Date: 2019-08-14
+- Updated Translations
+- Added the Acceptable Ads Privacy filter list
+- Fixed a security issue in the 'bandaid' processing on getadblock.com
+- Fixed an issue on the Customize tab of the AdBlock Options page
+- Further improvements to the 'MyAdBlock' image replacement functionality
+
 Version: 3.51.1, Date: 2019-08-07
 - Fixed a few issues in the 'MyAdBlock' image replacement functionality
 - Fixed an issue on the AdBlock Option page not showing the translation credits widget
