Updated with version: 3.54.0 53.0 changes

--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -2482,5 +2482,17 @@
   "devtools_type_title": {
     "description": "Type column header text",
     "message": "Type"
+  },
+  "new_badge":{
+    "message":"New",
+    "description":"DO NOT TRANSLATE. Max 4 characters. Text in the badge of our extension toolbar icon."
+  },
+  "new_cta_default_text":{
+    "message":"Upgrade your AdBlock",
+    "description":"Text of a temporary call-to-action item in the popup menu."
+  },
+  "new_cta_hovered_text":{
+    "message":"Enjoy better browsing",
+    "description":"Text of a temporary call-to-action hovered item in the popup menu."
   }
 }
