Updated with version: 3.60.0 53.0 changes

--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -2868,5 +2868,9 @@
   "resume_blocking_ads_period":{
     "message":"Resume blocking ads.",
     "description":"First sentence in the aria-label of the pop-up menu action to resume blocking ads."
+  },
+  "do_not_swap_ads":{
+    "message":"Don't swap ads",
+    "description":"Text of a clickable option to stop swapping ads with images in the Options page Image Swap tab."
   }
 }
