--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -1,6 +1,6 @@
 {
   "description":{
-    "message":"The most popular Chrome extension, with over 60 million users! Blocks ads all over the web.",
+    "message":"Block ads and pop-ups on YouTube, Facebook, Twitch, and your favorite websites.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
   "description2":{
@@ -12,8 +12,8 @@
     "message":"AdBlock development build"
   },
   "name_releasebuild":{
-    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
-    "message":"AdBlock"
+    "description":"Extension name to be shown for release \/ published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dashes should be translated",
+    "message":"AdBlock——best ad blocker"
   },
   "description_edge":{
     "message":"AdBlock. The #1 ad blocker with over 200 million downloads. Blocks ads all over the web.",
